# AngryBirdsRL

./: .gitignore  ReadMe.md  action_space.py  game_env.py  main_game.py  original_game.py  pyproject.toml  reinforcement_learning.py  requirements.tx  rl_agent.py  train_agent.py  train_model.py  visualize_rl.py
logs/: env_0.monitor.csv  env_1.monitor.csv  env_2.monitor.csv  env_3.monitor.csv  training_log_20250101_201922.json
models/: dqn_model_20250101_201922.pth
training_runs/run_1731208273/: final_model_env  final_stats.json
training_runs/run_1731208273/eval/: evaluations.npz
training_runs/run_1731208273/logs/: training_stats.json
training_runs/run_1731300678/logs/: training_stats.json
wandb/: latest-run
wandb/run-20241109_180534-gv665y3l/: run-gv665y3l.wandb
wandb/run-20241109_181111-97vi1oyc/: run-97vi1oyc.wandb
wandb/run-20241109_182959-rv18ml1z/: run-rv18ml1z.wandb
wandb/run-20241109_184134-u68qt9k2/: run-u68qt9k2.wandb
wandb/run-20241109_184546-tkojzr6m/: run-tkojzr6m.wandb
wandb/run-20241109_184627-ifk35nip/: run-ifk35nip.wandb
wandb/run-20241109_184736-1simq2oo/: run-1simq2oo.wandb
wandb/run-20241109_184736-1simq2oo/files/: config.yaml  (+1 more)
wandb/run-20241109_190601-pndd9ylx/: run-pndd9ylx.wandb
wandb/run-20241109_191040-2tnfx4fp/: run-2tnfx4fp.wandb
wandb/run-20241109_191113-ls8sy3ff/: run-ls8sy3ff.wandb
wandb/run-20241110_205117-m6g58qgd/: run-m6g58qgd.wandb
wandb/run-20241110_210102-b41omjjv/: run-b41omjjv.wandb
wandb/run-20241110_210223-x3eizqey/: run-x3eizqey.wandb
wandb/run-20241110_210504-jb7ampsx/: run-jb7ampsx.wandb
(+40 files in other folders)
