[tool.poetry]
name = "cartpolerl"
version = "0.1.0"
description = ""
authors = ["labuelsamen <luai.abuelsamen@mail.mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^2.2.1"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
